# ChangeLog for mail-filter/bogofilter
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/bogofilter/ChangeLog,v 1.80 2007/01/01 22:26:57 tove Exp $

*bogofilter-1.1.4 (01 Jan 2007)

  01 Jan 2007; Torsten Veller <tove@gentoo.org> +bogofilter-1.1.4.ebuild:
  Version bump

  26 Dec 2006; Andrej Kacian <ticho@gentoo.org>
  -files/1.1.3-patch.1142.Makefile.am, +files/1.1.3-patch.1142.Makefile.in,
  bogofilter-1.1.3.ebuild:
  Patch src/Makefile.in instead of src/Makefile.am to avoid having to run
  autoconf, thus fixing bug #159088.

  26 Dec 2006; Andrej Kacian <ticho@gentoo.org> bogofilter-1.1.3.ebuild:
  Revert last change, this was not a proper fix.

  26 Dec 2006; Andrej Kacian <ticho@gentoo.org> bogofilter-1.1.3.ebuild:
  Make sci-libs/gsl an unconditional dependency, since we're rebuilding
  configure and need macros provided by it. Closes bug #159088, reported by
  Lónyai Gergely <alephlg at gmail.com>.

  09 Dec 2006; Torsten Veller <tove@gentoo.org>
  +files/1.1.3-patch.1142.Makefile.am, bogofilter-1.1.3.ebuild:
  Fixes parallel make failure with included gsl (bug #112638). Thanks to
  Martin von Gagern and David Relson.

*bogofilter-1.1.3 (03 Dec 2006)

  03 Dec 2006; Torsten Veller <tove@gentoo.org> -bogofilter-1.1.1.ebuild,
  +bogofilter-1.1.3.ebuild:
  Version bump. Removed old version.

  02 Dec 2006; Torsten Veller <tove@gentoo.org> -bogofilter-1.0.2.ebuild,
  -bogofilter-1.0.3.ebuild, bogofilter-1.1.1-r1.ebuild:
  Lifting keywords for alpha, ia64, ppc, ppc64 from 1.1.1 to 1.1.1-r1 wrt bugs
  #153240 and #153939. Removing old versions.

  01 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  bogofilter-1.1.1-r1.ebuild:
  Stable on hppa wrt #153240

  20 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  bogofilter-1.1.1-r1.ebuild:
  Stable on sparc

  10 Nov 2006; Daniel Gryniewicz <dang@gentoo.org>
  bogofilter-1.1.1-r1.ebuild:
  Marked stable on amd64 for bug #153240
