@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/bogofilter/Attic/bogofilter-1.1.1-r1.ebuild,v 1.6 2006/12/02 09:32:21 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/bogofilter/Attic/bogofilter-1.1.1-r1.ebuild,v 1.7 2007/01/06 21:10:48 tove Exp $
 
 inherit eutils
 
@@ -33,12 +33,13 @@ src_compile() {
 
 	# determine backend: berkdb *is* default
 	if use berkdb && use sqlite ; then
-		einfo "Both berkdb and sqlite are in USE."
-		einfo "Choosing berkdb as default database backend."
+		elog "Both useflags berkdb and sqlite are in USE:"
+		elog "Using berkdb as database backend."
 	elif use sqlite ; then
 		myconf="${myconf} --with-database=sqlite"
 	elif ! use berkdb ; then
-		einfo "Using berkdb as database backend."
+		elog "Neither berkdb nor sqlite are in USE:"
+		elog "Using berkdb as database backend."
 	fi
 
 	econf ${myconf} || die "configure failed"
@@ -71,6 +72,6 @@ src_install() {
 
 pkg_postinst() {
 	echo
-	einfo "If you need ${ROOT}usr/bin/bf_tar please install app-arch/pax."
+	elog "If you need ${ROOT}usr/bin/bf_tar please install app-arch/pax."
 	echo
 }
