@@ -1,6 +1,12 @@
 # ChangeLog for mail-filter/bogofilter
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/bogofilter/ChangeLog,v 1.80 2007/01/01 22:26:57 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/bogofilter/ChangeLog,v 1.81 2007/01/06 21:10:48 tove Exp $
+
+  06 Jan 2007; Torsten Veller <tove@gentoo.org>
+  -files/1.1.3-patch.1142.Makefile.in, bogofilter-0.92.8.ebuild,
+  bogofilter-1.1.1-r1.ebuild, -bogofilter-1.1.3.ebuild,
+  bogofilter-1.1.4.ebuild:
+  Removed unneeded version and changed einfo->elog
 
 *bogofilter-1.1.4 (01 Jan 2007)
 
